--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,45 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
   background-color: wheat;
 }
 
-.z-depth-2 {
-  align: left;
-  float: left;
-}
-
-.p {
-  margin-top: 0;
-  margin-bottom: 0;
-  font: size 8;
-}
-
-.h7 {
-  font-style: bold;
-  font-weight: bolder;
-  font-size: 8;
+.search {
+  margin-top: 100px;
 }
 
 .btn-warning {
 
-  background-color: tomato;
-  float: right;
-  margin-top: 20px;
+float: right;
+margin-top: 20px;
 }
 
-.toda-ruy {
-  background-color: white ;
-  margin-top: 10px;
-  margin-left: 5px;
-  
-
-
-}
 
 .z-depth-2 {
-  margin-top: 5px;
+float: left;
+margin-top: 10px;
+
 }
 
+.my-row {
+  margin-left: 10px;
+  background-color: whitesmoke;
+  margin-top: 5px;
+  margin-left: 2px;
+  padding: 0 5px 0 5px;
+}
+
+.my-col {
+
+  margin-bottom: 10px;
+  padding: 0 5px 0 5px;
+  
+
+}
+
+.poiu {
+  size: 740px;
+}
+
+.container {
+  align-items: center;
+}
